Small Code Improvements  * Replaced Collections.unmodifiableList with List.copyOf()  * Replaced Collections.unmodifiableMap with Map.copyOf.  * Replaced SimpleEntry with Map.entry