@@ -17,7 +17,6 @@
 package io.spring.initializr.generator.buildsystem.maven;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -54,9 +53,9 @@ public class MavenDeveloper {
 		this.url = builder.url;
 		this.organization = builder.organization;
 		this.organizationUrl = builder.organizationUrl;
-		this.roles = Collections.unmodifiableList(new ArrayList<>(builder.roles));
+		this.roles = List.copyOf(builder.roles);
 		this.timezone = builder.timezone;
-		this.properties = Collections.unmodifiableMap(new LinkedHashMap<>(builder.properties));
+		this.properties = Map.copyOf(new LinkedHashMap<>(builder.properties));
 	}
 
 	/**
